# LLM

./: README.md
DeepLearningAI/01_ChatGPT_Prompt Engineering_for_Developers/: 01_Guidelines.ipynb
DeepLearningAI/04_Building_Systems_with_the_ChatGPT_API/: 04_01_Languag_Models_the_Chat_Format_and_Tokens.ipynb  (+5 more)
RAG/: Retrieval-augmented generation.ipynb
langGraph/: Adaptive_RAG_gpt-1.ipynb
langchain/: hook.ipynb  trim_message.ipynb  web_search_test.ipynb
langchain_tutorial_kr/: pyproject.toml
langchain_tutorial_kr/ basic/: LCEL_basic.ipynb  LCEL_upgraded.ipynb  Runnable.ipynb  openai_API.ipynb
langchain_tutorial_kr/Chains/: ConversationChain.ipynb
langchain_tutorial_kr/OutputParser/: ConversationKGMomory.ipynb  ConversationSummaryMemory.ipynb  DatetimeOutputParser.ipynb  EnumOutputParser.ipynb  JsonOutputParser.ipynb  LCEL_memory.ipynb  OutputFixingParser.ipynb  PandasDataFrameOutputParser.ipynb  PydanticOutputParser.ipynb  StructuredOutputParser.ipynb  VectorStoreRetrieverMemory.ipynb  commaSeparatedListOutputParser.ipynb
langchain_tutorial_kr/VectorStore/: vectorstore.ipynb
langchain_tutorial_kr/memory/: ConversationBufferMemory.ipynb  ConversationBufferWindowMemory.ipynb  ConversationEntityMemory.ipynb  ConversationTokenBufferMemory.ipynb
langchain_tutorial_kr/prompt/: customPromptHub.ipynb  fewshotPrompt.ipynb  langchainHub.ipynb  prompt.ipynb
llm/: pyproject.toml
llm_interview/: Q11_Q12.ipynb  Q1_Q10.ipynb
poet/: ChatOpenAI_main.py  main.py  oepnAI_main.py
promptingguide/: zero_shot_prompting.ipynb
rss_llm/: test.ipynb
(+20 files in other folders)
