[tool.poetry]
name = "langchain"
version = "0.1.0"
description = ""
authors = ["geonheeeee <geonhee@goyoai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.29"
chromadb = "^0.4.24"
langchainhub = "^0.1.15"
networks = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
